# zuspec-dataclasses

./: .buildinfo  .envrc  .gitignore  API_REFERENCE.md  Agents.md  DOCUMENTATION_REVIEW.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_SUMMARY.md  IR_CHECKER_IMPLEMENTATION.md  IR_CHECKER_README.md  PARAMETERIZATION_GUIDE.md  PARAMETERIZATION_SUMMARY.md  PROFILE_AUTO_DETECTION.md  PROFILE_CHECKER_README.md  README.md  REFACTORING_SUMMARY.md  UNIFIED_EVALUATION.md  abstraction_levels.html  actions.html  bootstrap.sh  checker.html  components.html  constraints.html  datamodel.html  datatypes.html  dependencies.html  fields.html  genindex.html  index.html  interface_protocols.html  intro.html  ivpm.yaml  llms.txt  migration_callable_to_protocol.html  objects.inv  out  pipeline-api.html  pragmas.html  profiles.html  pyproject.toml  (+13 more)
.github/workflows/: ci.yml
_sources/: abstraction_levels.rst.txt  components.rst.txt  constraints.rst.txt  datamodel.rst.txt  datatypes.rst.txt  dependencies.rst.txt  index.rst.txt  interface_protocols.rst.txt  migration_callable_to_protocol.rst.txt  split_transactions.rst.txt  struct.rst.txt  types.rst.txt
_sources/notes/: abstraction_best_practices_notes.rst.txt
doc/: TypeExtension.md  copyright.py
docs/: CoreFeatures.md  Makefile  RST_UPDATES.md  RST_UPDATES_OLD.md  RTL_IMPLEMENTATION_COMPLETE.md  RTL_QUICKSTART.md  Roadmap.md  abstraction_levels.rst  actions.rst  checker.rst  components.rst  conf.py  constraints.rst  copyright.py  datatypes.rst  developers.rst  fields.rst  index.rst  intro.md  intro.rst  mapping_rules.md  pipeline-api.rst  pragmas.rst  profile_checker_design.md  profile_checker_guide.md  profiles.md  profiles.rst  python_to_verilog_diagram.md  regmem.md  runtime.rst  type_elaboration.rst  types.rst  zuspec_language.md
docs/notes/: Notes.md  Roadmap.md  TypeExtension.md  TypeTransformers.md  bindmap.md  rtl.md  rtl_future.md
examples/: activity_dma.py  profile_auto_detection_example.py
notes/: abstraction_best_practices_notes.html
obj_dir/: Vregfile  Vregfile.cpp  Vregfile.h  Vregfile.mk  Vregfile__ALL.cpp  Vregfile__ALL.d  Vregfile__Syms.cpp  Vregfile__Syms.h  Vregfile___024root.h  Vregfile___024root__DepSet_h357c9822__0.cpp  Vregfile___024root__DepSet_h357c9822__0__Slow.cpp  Vregfile___024root__DepSet_h89f57a1c__0.cpp  Vregfile___024root__DepSet_h89f57a1c__0__Slow.cpp  Vregfile___024root__Slow.cpp  Vregfile___024unit.h  Vregfile___024unit__DepSet_h8934e9a6__0__Slow.cpp  Vregfile___024unit__Slow.cpp  Vregfile__main.cpp  Vregfile__pch.h  Vregfile__ver.d  Vregfile_classes.mk  verilated.d  verilated_threads.d
tests/: test_domain_types.py  test_factory_domains.py  test_pipeline_api.py  test_sim_domain.py  test_sync_decorator.py
(+565 files in other folders)
