
[project]
name = "zuspec-dataclasses"
version = "0.0.1"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project.entry-points."flake8.extension"]
ZDC = "zuspec.dataclasses.flake8_zdc_struct:ZuspecFlake8Plugin"

[project.entry-points."zuspec.ir_checkers"]
Retargetable = "zuspec.dataclasses.ir_checker.retargetable:RetargetableIRChecker"
Python = "zuspec.dataclasses.ir_checker.python_profile:PythonIRChecker"

[project.entry-points."zuspec.profiles"]
Retargetable = "zuspec.dataclasses.profiles:RetargetableProfile"
Python = "zuspec.dataclasses.profiles:PythonProfile"

[tool.mypy]
mypy_path = "src"
# MyPy plugin deprecated - use flake8 plugin instead
# plugins = ["zuspec.dataclasses.mypy.plugin"]
show_column_numbers = true
show_error_end = true

[tool.setuptools.package-data]
"zuspec.dataclasses" = [
    "llms.txt",
    "py.typed"
]
