
[project]
name = "zuspec-dataclasses"
version = "0.0.1"
dependencies = [
    "networkx>=3.0",
    "zuspec-ir-core",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project.entry-points."zuspec.solver.backend"]
python = "zuspec.dataclasses.solver.backend.python_backend:PythonSolverBackend"

[project.entry-points."flake8.extension"]
ZDC = "zuspec.dataclasses.flake8_zdc_struct:ZuspecFlake8Plugin"

[project.entry-points."zuspec.ir_checkers"]
Retargetable = "zuspec.dataclasses.ir_checker.retargetable:RetargetableIRChecker"
Python = "zuspec.dataclasses.ir_checker.python_profile:PythonIRChecker"

[project.entry-points."zuspec.profiles"]
Retargetable = "zuspec.dataclasses.profiles:RetargetableProfile"
Python = "zuspec.dataclasses.profiles:PythonProfile"

[project.entry-points."zuspec.ext"]
zuspec_dataclasses = "zuspec.dataclasses.cli_plugin:ZuspecDataclassesPlugin"

[tool.setuptools.package-data]
"zuspec.dataclasses" = [
    "llms.txt",
    "py.typed"
]
